Improved Main Hero Caption

--- a/css/style.css
+++ b/css/style.css
@@ -55,7 +55,7 @@ nav{
   color: white;
   position: relative;
   top:40%;
-  font-size: 1.5vw;
+  font-size: 150%;
   width:50%;
   height: 10rem;
   padding-top: 0.5rem;
